# DeepAstroUDA

./: .gitignore  README.md  loss.py  oda.yaml  pyproject.toml
.github/workflows/: publish.yaml
config_templates/: config.yaml
deep_astro_uda/: settings.py
deep_astro_uda/apex/amp/: _amp_state.py  _initialize.py
deep_astro_uda/apex/contrib/optimizers/: distributed_fused_adam.py  distributed_fused_adam_v2.py  distributed_fused_adam_v3.py  distributed_fused_lamb.py  fp16_optimizer.py  fused_adam.py  fused_lamb.py  fused_sgd.py
deep_astro_uda/apex/normalization/: fused_layer_norm.py
deep_astro_uda/apex/optimizers/: fused_adagrad.py  fused_adam.py  fused_lamb.py  fused_mixed_precision_lamb.py  fused_novograd.py  fused_sgd.py
deep_astro_uda/apex/parallel/: optimized_sync_batchnorm.py  optimized_sync_batchnorm_kernel.py  sync_batchnorm.py  sync_batchnorm_kernel.py
deep_astro_uda/apex/transformer/: README.md  __init__.py  parallel_state.py  utils.py
deep_astro_uda/apex/transformer/amp/: __init__.py  grad_scaler.py
deep_astro_uda/apex/transformer/functional/: __init__.py  (+1 more)
deep_astro_uda/client/: astro_app.py  options.py
deep_astro_uda/client/commands/: commands.py  demo_command.py  infer_command.py  run_command.py
deep_astro_uda/configs/: config_functions.py  oda.yaml
deep_astro_uda/data_utils/: download_data.py
deep_astro_uda/model/: eval.py  loss.py  train.py
deep_astro_uda/mydataset/: ImageFolder.py
deep_astro_uda/tuner/: tuner.py
deep_astro_uda/unaligned_data_loader/: UnalignedDataLoader.py
models/: LineareAverage.py
tuner/: tuner.py
(+15 files in other folders)
