[tool.poetry]
name = "deep_astro_uda"
version = "0.1.0"
description = ""
authors = ["Ashia Lewis <pantagruelspendulum@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cleo = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
deep_astro = "deep_astro_uda.client.astro_app:main"

